v0.47.0

- Add experimental multi-process driver2 that uses event callbacks (libev)
- Add new standalone driver (driver3) combining event callbacks with
  multi-process parallelism model, replacing previous thread based standalone
  driver
- Parallelize PostgreSQL vacuuming when building the database
- pgsql: Disable autovacuum on a table while it is being loaded

v0.46.2

- Fix post-process script to ignore transaction errors in statistical
  calculations

v0.46.1

- Fix data generator quoting bug introduced in v0.46.0
- Clean up client usage message with additions in v0.46.0
- Fix inconsistencies with handling output directory
- Reformat driver usage to be consistent with other programs
- Clean up datagen usage message
- Fix post-process script to correctly handle merged mix logs

v0.46.0

- Refactor client code for libpq to automatically build support if libraries
  exist
- Remove support for Drizzle; discontinued since 2016
- Allow specifying partitioning options in PostgreSQL data load script 
- Refactor client code for sqlite3 to automatically build support if libraries
  exist
- Refactor client code for MySQL to automatically build support if libraries
  exist
- Refactor client code for unixODBC to automatically build support if libraries
  exist
- Fix some issues in CockroachDB transaction code.
- Use function pointers for managing output of timestamps in datagen
- Replace macros with functions in datagen

v0.45.1

- Rename PostgreSQL dbt2 extension's SQL file

v0.45.0

- Fix memory clobbering bug introduced when using libpq functions in binary
  mode
- Increase size of additional data structures for UTF-8

v0.44.0

- Made some changes to Docker scripts to help customize PostgreSQL version used
- Add scripts to build a database on CockroachDB
- Add transaction logic to the client for CockroachDB
- Update workload scripts for CockroachDB
- Add scripts to build a database on YugabyteDB
- Update libpq client code to transmit and receive data in binary mode.
