@@ -16,16 +16,31 @@ add_subdirectory (storedproc)
 
 include (InstallRequiredSystemLibraries)
 
+SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
+
+SET(CPACK_PACKAGE_NAME "dbt2")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Database Test 2")
+SET(CPACK_PACKAGE_VENDOR "dbt")
+
+SET(CPACK_PACKAGE_VERSION_MAJOR "0")
+SET(CPACK_PACKAGE_VERSION_MINOR "47")
+SET(CPACK_PACKAGE_VERSION_PATCH "0")
+SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
+
+SET(CPACK_INSTALL_CMAKE_PROJECTS "")
+
+SET(CPACK_PACKAGE_DESCRIPTION_FILE "README")
+SET(CPACK_RESOURCE_FILE_LICENSE "LICENSE")
+
 set (CPACK_SOURCE_GENERATOR "TBZ2;TXZ;ZIP")
 set (
     CPACK_PACKAGE_DESCRIPTION_SUMMARY
-    "database test 2"
+    "Database Test 2"
 )
 set (CPACK_PACKAGE_VENDOR "osdl")
-set (CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-set (CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-set (CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
+
 set (
     CPACK_SOURCE_IGNORE_FILES
     "\\\\.bz2\\$;\\\\.gz\\$;\\\\.xz\\$;\\\\.Z\\$;\\\\.zip\\$"
